--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".SplashScreen">
+    tools:context=".ui.SplashScreen">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
