--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -3,9 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="140dp"
+    android:layout_height="200dp"
     android:layout_margin="10dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -13,6 +14,10 @@
     app:cardElevation="10dp"
     app:cardCornerRadius="7dp"
     >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
     <ImageView
         android:id="@+id/movie_image"
         android:layout_margin="10dp"
@@ -29,10 +34,107 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/movie_title"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:maxLines="2"
         app:layout_constraintStart_toEndOf="@+id/movie_image"
         app:layout_constraintTop_toTopOf="parent"
-        android:textStyle="bold"
-        android:textSize="20sp"
         />
+        <TextView
+            android:id="@+id/category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category"
+            app:layout_constraintTop_toBottomOf="@+id/movie_title"
+            app:layout_constraintStart_toEndOf="@+id/movie_image"
+            android:textColor="@color/black"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="2dp"
+            android:textSize="15sp"
+            />
+        <TextView
+            android:id="@+id/category_text"
+            android:layout_marginTop="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@id/category"
+            app:layout_constraintTop_toBottomOf="@id/movie_title"
+            android:text=" for adults"
+            />
+        <TextView
+            android:id="@+id/overview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/overview"
+            app:layout_constraintTop_toBottomOf="@+id/category"
+            app:layout_constraintStart_toEndOf="@+id/movie_image"
+            android:textColor="@color/black"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="2dp"
+            android:textSize="15sp"
+            />
+        <TextView
+            android:id="@+id/overview_text"
+            android:layout_marginTop="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@id/overview"
+            app:layout_constraintTop_toBottomOf="@id/category"
+            android:text="someText"
+            />
+        <TextView
+            android:layout_marginTop="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rating"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:text="@string/rating"
+            app:layout_constraintTop_toBottomOf="@id/overview_text"
+            app:layout_constraintStart_toEndOf="@id/movie_image"
+            />
+        <TextView
+            android:layout_marginLeft="2dp"
+            android:id="@+id/rating_text"
+            android:layout_marginTop="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@id/rating"
+            app:layout_constraintTop_toBottomOf="@id/overview_text"
+            android:text="someRating"
+            />
+        <TextView
+            android:layout_marginTop="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/date"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:text="@string/release_date"
+            app:layout_constraintTop_toBottomOf="@id/rating"
+            app:layout_constraintStart_toEndOf="@id/movie_image"
+            />
+        <TextView
+            android:layout_marginLeft="2dp"
+            android:id="@+id/date_text"
+            android:layout_marginTop="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@id/date"
+            app:layout_constraintTop_toBottomOf="@id/rating"
+            android:text="someDate"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
 </RelativeLayout>
