--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name = "colorPrimaryDark">#000740</color>
     <color name = "colorAccent">#3028FF</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
