--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -6,7 +6,7 @@
 
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -22,24 +22,25 @@
         android:id="@+id/movie_image"
         android:layout_margin="10dp"
         android:layout_width="140dp"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
+        android:layout_height="250dp"
         android:src="@mipmap/splash_icon"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
     <TextView
         android:id="@+id/movie_title"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="5dp"
-        android:layout_width="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
         android:text="@string/movie_title"
         android:textStyle="bold"
         android:textSize="15sp"
         android:textColor="@color/black"
         android:maxLines="2"
         app:layout_constraintStart_toEndOf="@+id/movie_image"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/movie_image"
         />
         <TextView
             android:id="@+id/category"
@@ -54,6 +55,7 @@
             android:textSize="15sp"
             />
         <TextView
+            android:layout_marginStart="2dp"
             android:id="@+id/category_text"
             android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
@@ -79,12 +81,14 @@
         <TextView
             android:id="@+id/overview_text"
             android:layout_marginTop="2dp"
-            android:layout_width="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@id/overview"
-            app:layout_constraintTop_toBottomOf="@id/category"
+            android:maxLines="7"
+            app:layout_constraintStart_toEndOf="@id/movie_image"
+            app:layout_constraintTop_toBottomOf="@id/overview"
             android:text="someText"
             />
         <TextView
@@ -122,8 +126,11 @@
             android:text="@string/release_date"
             app:layout_constraintTop_toBottomOf="@id/rating"
             app:layout_constraintStart_toEndOf="@id/movie_image"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="15dp"
             />
         <TextView
+
             android:layout_marginLeft="2dp"
             android:id="@+id/date_text"
             android:layout_marginTop="2dp"
