adding movie details fragment and fetching the data

--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -83,8 +83,8 @@
         <TextView
             android:id="@+id/overview_text"
             android:layout_marginTop="2dp"
-            android:layout_marginStart="5dp"
-            android:layout_width="150dp"
+            android:layout_marginStart="155dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="15sp"
