--- a/app/src/main/res/layout/movie_details_fragment.xml
+++ b/app/src/main/res/layout/movie_details_fragment.xml
@@ -1,14 +1,233 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MovieDetails">
-
-    <TextView
-        android:id="@+id/test"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.MovieDetailsFragment">
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/progress_bar_movie_details"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        style="?android:attr/progressBarStyle"
+        android:visibility="visible"
+        />
+    <com.google.android.material.appbar.AppBarLayout
+        android:visibility="visible"
+        android:id = "@+id/app_bar"
+        android:layout_width = "match_parent"
+        android:layout_height = "300dp"
+        app:layout_collapseMode = "parallax"
+        android:paddingTop = "20dp"
+        app:layout_collapseParallaxMultiplier = "1.1"
+        android:background="@android:color/transparent">
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:src="@mipmap/app_icon"
+    android:id="@+id/movie_image"
+    />
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id = "@+id/collapsing_toolbar"
+            android:layout_width = "match_parent"
+            android:layout_height = "match_parent"
+            app:layout_scrollFlags = "scroll|exitUntilCollapsed">
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width = "match_parent"
+                android:layout_height = "?attr/actionBarSize"
+                app:layout_collapseMode = "pin"
+                app:layout_scrollFlags = "scroll">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width = "match_parent"
+                    android:layout_height = "match_parent">
+            <TextView
+                android:id="@+id/movie_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text=""
+                android:textSize="22sp"
+                android:textStyle="bold"
+                />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nested_scroll_movie_details"
+        android:visibility="visible"
+        android:layout_width = "match_parent"
+        android:layout_height = "match_parent"
+        android:background = "@color/white"
+        app:layout_behavior = "@string/appbar_scrolling_view_behavior">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginTop="5dp"
+            android:layout_width = "match_parent"
+            android:layout_height = "match_parent"
+            android:orientation = "vertical"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            >
+            <TextView
+                android:id="@+id/movie_title_middle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textColor="@color/black"
+                android:text="movie title"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
+            <TextView
+            android:id="@+id/genres"
+            app:layout_constraintTop_toBottomOf="@id/movie_title_middle"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/genres"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            />
+            <TextView
+                android:id="@+id/genres_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/genres"
+                app:layout_constraintTop_toBottomOf="@id/movie_title_middle"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="3dp"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:text="Comedy, Romance"
+                />
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/overview"
+                app:layout_constraintTop_toBottomOf="@id/genres"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/overview"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                />
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/overview_text"
+                app:layout_constraintTop_toBottomOf="@id/overview"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/overview"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                />
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/date"
+                app:layout_constraintTop_toBottomOf="@id/overview_text"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/release_date"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                />
+            <TextView
+                android:id="@+id/date_text"
+                android:layout_marginTop="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/date"
+                app:layout_constraintTop_toTopOf="@id/date"
+                android:layout_marginStart="5dp"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:text="2020-07-02"
+                />
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/language"
+                app:layout_constraintTop_toBottomOf="@id/date"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/language"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                />
+            <TextView
+                android:id="@+id/language_text"
+                android:layout_marginTop="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/language"
+                app:layout_constraintTop_toTopOf="@id/language"
+                android:layout_marginStart="5dp"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:text="English"
+                />
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/quote"
+                app:layout_constraintTop_toBottomOf="@id/language"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/quote"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                />
+            <TextView
+                android:id="@+id/quote_text"
+                android:layout_marginTop="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/quote"
+                app:layout_constraintTop_toTopOf="@id/quote"
+                android:layout_marginStart="5dp"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:text="SOME QUOTE"
+                />
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/rating"
+                app:layout_constraintTop_toBottomOf="@id/quote"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rating"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:layout_marginBottom="5dp"
+                />
+            <TextView
+                android:id="@+id/rating_text"
+                android:layout_marginTop="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/rating"
+                app:layout_constraintTop_toTopOf="@id/rating"
+                android:layout_marginStart="5dp"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:text="Rate"
+                android:layout_marginBottom="5dp"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
