--- a/app/src/main/res/layout/popular_movies_fragment.xml
+++ b/app/src/main/res/layout/popular_movies_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.PopularMovies">
+    tools:context=".ui.PopularMoviesFragment">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
