--- a/app/src/main/res/layout/movie_details_fragment.xml
+++ b/app/src/main/res/layout/movie_details_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.MovieDetailsFragment">
+    tools:context=".ui.movieDetails.MovieDetailsFragment">
     <androidx.core.widget.ContentLoadingProgressBar
         android:id="@+id/progress_bar_movie_details"
         android:layout_width="match_parent"
