fixing a bug in movieDetailsFragment layout

--- a/app/src/main/res/layout/movie_details_fragment.xml
+++ b/app/src/main/res/layout/movie_details_fragment.xml
@@ -194,7 +194,7 @@
             <TextView
                 android:layout_marginTop="5dp"
                 android:id="@+id/rating"
-                app:layout_constraintTop_toBottomOf="@id/quote"
+                app:layout_constraintTop_toBottomOf="@id/quote_text"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
