--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,149 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item_layout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="parent"
-    app:cardElevation="10dp"
-    app:cardCornerRadius="7dp"
-    >
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        >
-    <ImageView
-        android:id="@+id/movie_image"
-        android:layout_margin="10dp"
-        android:layout_width="140dp"
-        android:layout_height="250dp"
-        android:src="@mipmap/splash_icon"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-    <TextView
-        android:id="@+id/movie_title"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="15dp"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:text="@string/movie_title"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        android:textColor="@color/black"
-        android:maxLines="2"
-        app:layout_constraintStart_toEndOf="@+id/movie_image"
-        app:layout_constraintTop_toTopOf="@id/movie_image"
-        />
-        <TextView
-            android:id="@+id/category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/category"
-            app:layout_constraintTop_toBottomOf="@+id/movie_title"
-            app:layout_constraintStart_toEndOf="@+id/movie_image"
-            android:textColor="@color/black"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="2dp"
-            android:textSize="15sp"
-            />
-        <TextView
-            android:layout_marginStart="2dp"
-            android:id="@+id/category_text"
-            android:layout_marginTop="2dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@id/category"
-            app:layout_constraintTop_toBottomOf="@id/movie_title"
-            android:text=" for adults"
-            />
-        <TextView
-            android:id="@+id/overview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/overview"
-            app:layout_constraintTop_toBottomOf="@+id/category"
-            app:layout_constraintStart_toEndOf="@+id/movie_image"
-            android:textColor="@color/black"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="2dp"
-            android:textSize="15sp"
-            />
-        <TextView
-            android:id="@+id/overview_text"
-            android:layout_marginTop="2dp"
-            android:layout_marginStart="155dp"
+    <data>
+
+        <variable
+            name="popularMovie"
+            type="com.example.movienight.ui.popularMovies.model.PopularMovieUi" />
+    </data>
+
+    <RelativeLayout
+        android:id="@+id/item_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:maxLines="7"
-            app:layout_constraintStart_toEndOf="@id/movie_image"
-            app:layout_constraintTop_toBottomOf="@id/overview"
-            android:text="someText"
-            />
-        <TextView
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/rating"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:text="@string/rating"
-            app:layout_constraintTop_toBottomOf="@id/overview_text"
-            app:layout_constraintStart_toEndOf="@id/movie_image"
-            />
-        <TextView
-            android:layout_marginLeft="2dp"
-            android:id="@+id/rating_text"
-            android:layout_marginTop="2dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@id/rating"
-            app:layout_constraintTop_toBottomOf="@id/overview_text"
-            android:text="someRating"
-            />
-        <TextView
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/date"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:text="@string/release_date"
-            app:layout_constraintTop_toBottomOf="@id/rating"
-            app:layout_constraintStart_toEndOf="@id/movie_image"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="15dp"
-            />
-        <TextView
+            android:layout_margin="10dp"
+            app:cardCornerRadius="7dp"
+            app:cardElevation="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent">
 
-            android:layout_marginLeft="2dp"
-            android:id="@+id/date_text"
-            android:layout_marginTop="2dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@id/date"
-            app:layout_constraintTop_toBottomOf="@id/rating"
-            android:text="someDate"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
-</RelativeLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                >
+
+                <ImageView
+                    android:id="@+id/movie_image"
+                    android:layout_width="140dp"
+                    android:layout_height="250dp"
+                    android:layout_margin="10dp"
+                    android:src="@mipmap/splash_icon"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:setImage="@{popularMovie.posterPath}" />
+
+                <TextView
+                    android:id="@+id/movie_title"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="20dp"
+                    android:maxLines="2"
+                    android:text="@{popularMovie.title}"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toEndOf="@+id/movie_image"
+                    app:layout_constraintTop_toTopOf="@id/movie_image" />
+
+                <TextView
+                    android:id="@+id/category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="2dp"
+                    android:text="@string/category"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@+id/movie_image"
+                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />
+
+                <TextView
+                    android:id="@+id/category_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="2dp"
+                    android:text="@{popularMovie.adult? @string/adult : @string/family}"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/category"
+                    app:layout_constraintTop_toBottomOf="@id/movie_title" />
+
+                <TextView
+                    android:id="@+id/overview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="2dp"
+                    android:text="@string/overview"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@+id/movie_image"
+                    app:layout_constraintTop_toBottomOf="@+id/category" />
+
+                <TextView
+                    android:id="@+id/overview_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="155dp"
+                    android:layout_marginTop="2dp"
+                    android:maxLines="7"
+                    android:text="@{popularMovie.overview}"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/movie_image"
+                    app:layout_constraintTop_toBottomOf="@id/overview" />
+
+                <TextView
+                    android:id="@+id/rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="2dp"
+                    android:text="@string/rating"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/movie_image"
+                    app:layout_constraintTop_toBottomOf="@id/overview_text" />
+
+                <TextView
+                    android:id="@+id/rating_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="2dp"
+                    android:text="@{Double.toString(popularMovie.voteAverage)}"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/rating"
+                    app:layout_constraintTop_toBottomOf="@id/overview_text" />
+
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="2dp"
+                    android:text="@string/release_date"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/movie_image"
+                    app:layout_constraintTop_toBottomOf="@id/rating" />
+
+                <TextView
+                    android:id="@+id/date_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    android:text="@{popularMovie.releaseDate}"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/date"
+                    app:layout_constraintTop_toTopOf="@id/date" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </RelativeLayout>
+</layout>
