--- a/app/src/main/res/layout/popular_movies_fragment.xml
+++ b/app/src/main/res/layout/popular_movies_fragment.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".ui.popularMovies.PopularMoviesFragment">
-    <androidx.recyclerview.widget.RecyclerView
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="adapter"
+            type="com.example.movienight.ui.popularMovies.adapter.PopularMoviesAdapter" />
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/movie_list_rv"
-        android:visibility="visible"
-        tools:listitem="@layout/movie_item"
-        />
+        android:background="@color/colorPrimary"
+        tools:context=".ui.popularMovies.PopularMoviesFragment">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/movie_list_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="visible"
+            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+            app:setAdapter="@{adapter}"
+            app:spanCount="1"
+            tools:listitem="@layout/movie_item" />
 
 
-
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
