Build one-to-one chat instead of group chat 	integrate with Firebase FCM 	sending and recieving notification 	handling FCM notifications in background and foreground

--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="chatMessage"
-            type="com.example.movienight.data.models.requestModels.ChatMessageData" />
+            type="com.example.movienight.data.firebaseModels.ChatMessageData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
